opa/constraint-r.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyPath
metadata:
name: psp-host-network-ports
spec:
match:
kinds:
- apiGroups: [""]
kinds: ["Pod"]
parameters:
paths: ["/tmp", "/etc", "/usr"]
