opa/template-r.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenypath
  annotations:
    description: Prohibits unauthorized host paths.
spec:
  crd:
    spec:
      names:
        kind: K8sDenyPath
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            paths:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenypath

        violation[{"msg": msg, "details": {}}] {

        input.review.object.kind == "Pod"
        allowedpaths := input.parameters.paths
        hostpath := input.review.object.spec.volumes[_].hostPath.path
        not contains(allowedpaths,hostpath)
        msg := sprintf("%v not in allowed paths,[hostpath])
        }

        contains(allowedpaths,hostpaths) {
        hostpath == allowedpaths[_]
        }
